--- a/trunk/098/config/itemdesc.cfg
+++ b/trunk/098/config/itemdesc.cfg
@@ -860,3 +860,11 @@ Item 0x25fc
     Movable 1
 }
 
+Item 0x12345
+{
+    Name mowongarawr
+    Desc Mowonga rules!
+    graphic 0x13C7
+    Weight 1
+    Movable 1
+}
