--- a/trunk/098/config/servspecopt.cfg
+++ b/trunk/098/config/servspecopt.cfg
@@ -101,7 +101,7 @@ DefaultContainerMaxWeight=250
 # Be sure to set InvulTag to 2 if using AOSTooltip setting. This is so the Invul
 # color will show correctly in the tooltips.
 #
-UOFeatureEnable=0x20
+UOFeatureEnable=0x31a8
 
 #
 # HiddenTurnsCount
