--- a/trunk/098/pkg/npcs/hostiles/dragons/npc_lootgroups.cfg
+++ b/trunk/098/pkg/npcs/hostiles/dragons/npc_lootgroups.cfg
@@ -22,7 +22,7 @@ loogroup firelizard
 lootgroup drake1
 {
 	gold		3d75+100
-	item		SerpentsScales		2d3		50
+	item		SerpentScales		2d3		50
 	Item		level3map			1		1
 	Random	Circle5Scrolls		3		10
 	Random	Circle6Scrolls		2		10
@@ -46,7 +46,7 @@ lootgroup carve_drake1
 lootgroup drake2
 {
 	gold		3d75+100
-	item		SerpentsScales		2d3		50
+	item		SerpentScales		2d3		50
 	Item		level3map			1		1
 	Random	Circle5Scrolls		3		10
 	Random	Circle6Scrolls		2		10
@@ -70,7 +70,7 @@ lootgroup carve_drake2
 lootgroup frostdrake
 {
 	gold		3d75+100
-	item		SerpentsScales		2d3		50
+	item		SerpentScales		2d3		50
 	Item		level3map			1		1
 	Random	Circle5Scrolls		3		10
 	Random	Circle6Scrolls		2		10
@@ -95,7 +95,7 @@ lootgroup carve_frostdrake
 lootgroup spectraldrake
 {
 	gold		4d75+200
-	item		SerpentsScales		2d3		50
+	item		SerpentScales		2d3		50
 	Item		level3map			1		1
 	Random	Circle5Scrolls		3		10
 	Random	Circle6Scrolls		2		10
@@ -115,7 +115,7 @@ lootgroup spectraldrake
 lootgroup dragon1
 {
 	gold		4d100+150
-	item		SerpentsScales		2d3		50
+	item		SerpentScales		2d3		50
 	Item		WyrmHeart			1		100
 	Item		DragonsBlood		2d2+1	50
 	Item		level4map			1		1
@@ -149,7 +149,7 @@ lootgroup carve_dragon1
 lootgroup dragon2
 {
 	gold		4d100+150
-	item		SerpentsScales		2d3		50
+	item		SerpentScales		2d3		50
 	Item		WyrmHeart			1		100
 	Item		DragonsBlood		2d2+1	50
 	Item		level4map			1		1
@@ -182,7 +182,7 @@ lootgroup carve_dragon2
 lootgroup greatdragon1
 {
 	gold		5d80+250
-	item		SerpentsScales		2d2		50
+	item		SerpentScales		2d2		50
 	Item		WyrmHeart			1		100
 	Item		DragonsBlood		2d2		50
 	Item		level4map			1		1
@@ -212,7 +212,7 @@ lootgroup carve_greatdragon1
 lootgroup greatdragon2
 {
 	gold		5d80+250
-	item		SerpentsScales		2d2		50
+	item		SerpentScales		2d2		50
 	Item		WyrmHeart			1		100
 	Item		DragonsBlood		2d2		50
 	Item		level4map			1		1
@@ -242,7 +242,7 @@ lootgroup carve_greatdragon2
 lootgroup royaldragon1
 {
 	gold		5d100+250
-	item		SerpentsScales		2d3		50
+	item		SerpentScales		2d3		50
 	Item		WyrmHeart			1		100
 	Item		DragonsBlood		2d2+1	50
 	Item		level4map			1		1
@@ -275,7 +275,7 @@ lootgroup carve_royaldragon1
 lootgroup royaldragon2
 {
 	gold		5d100+250
-	item		SerpentsScales		2d3		50
+	item		SerpentScales		2d3		50
 	Item		WyrmHeart			1		100
 	Item		DragonsBlood		2d2+1	50
 	Item		level4map			1		1
@@ -308,7 +308,7 @@ lootgroup carve_royaldragon2
 lootgroup ancientdragon1
 {
 	gold		5d120+400
-	item		SerpentsScales		2d4		50
+	item		SerpentScales		2d4		50
 	Item		WyrmHeart			1		100
 	Item		DragonsBlood		2d2+1	50
 	Item		level4map			1		2
@@ -341,7 +341,7 @@ lootgroup carve_ancientdragon1
 lootgroup ancientdragon2
 {
 	gold		5d120+400
-	item		SerpentsScales		2d4		50
+	item		SerpentScales		2d4		50
 	Item		WyrmHeart			1		100
 	Item		DragonsBlood		2d2+1	50
 	Item		level4map			1		2
@@ -374,7 +374,7 @@ lootgroup carve_ancientdragon2
 lootgroup wyvern
 {
 	gold		3d75+150
-	item		SerpentsScales		2d3		50
+	item		SerpentScales		2d3		50
 	Item		level3map			1		1
 	Random	Circle5Scrolls		3		10
 	Random	Circle6Scrolls		2		10
@@ -420,7 +420,7 @@ lootgroup seaserpent
 {
 	gold		3d75+150
 	Item		Level3Map			1		1
-	Item		SerpentsScale		2d3		50
+	Item		SerpentScales		2d3		50
 	Random	Gems				2d2		50
 	Random	Junk				1D3-1	50
 
