--- a/trunk/098/pkg/npcs/hostiles/vampires/npc_lootgroups.cfg
+++ b/trunk/098/pkg/npcs/hostiles/vampires/npc_lootgroups.cfg
@@ -167,7 +167,7 @@ lootgroup undeaddragon
 {
 	gold		7d100+500
 	Item		WyrmHeart			1		100
-	item		SerpentsScales		2d2		50
+	item		SerpentScales		2d2		50
 	Item		level4map			1		1
 	Item		level5map			1		1
 	Random	NecroScrolls		1d3-1		10
@@ -189,7 +189,7 @@ lootgroup undeaddragon
 
 lootgroup vampiricserpent
 {
-	Item		SerpentsScales		1d3		50
+	Item		SerpentScales		1d3		50
 	Random	NecroRegs			1d2		50
 	Random	Gems				1		50
 }
