--- a/trunk/098/pkg/npcs/townfolk/merchants/mrcspawn.cfg
+++ b/trunk/098/pkg/npcs/townfolk/merchants/mrcspawn.cfg
@@ -9,13 +9,11 @@
 MerchantType Bard
 {
 	Sells Instruments
-	Buys Instruments
 }
 
 MerchantType Shipwright
 {
 	Sells BoatDeeds
-	Buys BoatDeeds
 }
 
 MerchantType  Mage
@@ -23,21 +21,18 @@ MerchantType  Mage
 	Sells	Reagents
 	Sells	Runes
 	Sells	Spellbook
-	Sells	Spellbook
 }
 
 MerchantType  Weaponsmith
 {
 	Sells	Weapons
-	Buys Weapons
+	Sells	Ingots
 }
 
 MerchantType  Armorer
 {
 	Sells	Armor
 	Sells	Ingots
-	Buys	Armor
-	Buys	Ingots
 }
 
 MarchantType Alchemist
@@ -45,24 +40,18 @@ MarchantType Alchemist
 	Sells	Reagents
 	Sells	Potions
 	Sells	emptybottles
-	Buys	Potions
-	Buys 	emptybottles
 }
 
 MerchantType  Tailor
 {
 	Sells	Clothes
 	Sells	TailorItems
-	Buys	Clothes
-	Buys	TailorItems
 }
 
 MerchantType  Leatherworker
 {
 	Sells	Leather
 	Sells 	shoes
-	Buys	Leather
-	Buys 	shoes
 }
 
 MerchantType  Provisioner
@@ -70,14 +59,11 @@ MerchantType  Provisioner
 	Sells	Containers
 	Sells	Basic
 	Sells	Tools
-	Buys	Basic
-	Buys	Tools
 }
 
 MerchantType  Carpenter
 {
 	Sells	Tools
-	Buys	Tools
 }
 
 MerchantType  Bowyer
@@ -102,45 +88,38 @@ MerchantType  Architect
 MerchantType Cobbler
 {
 	Sells	Shoes
-	Buys 	Shoes
 }
 
 Merchanttype Butcher
 {
 	Sells	meat
-	Buys	meat
 }
 
 Merchanttype Baker
 {
 	Sells	food
-	Buys	food
 }
 
 Merchanttype farmer
 {
 	Sells	veggies
 	Sells	seeds
-	Buys	veggies
 }
 
 Merchanttype barkeep
 {
 	Sells	booze
-	Buys	booze
 }
 
 Merchanttype beekeeper
 {
 	Sells	beestuff
-	Buys	beestuff
 }
 
 Merchanttype apothecary
 {
 	Sells	emptybottles
 	Sells	Healingstuff
-	Buys	Healingstuff
 }
 
 MerchantType  Scribe
@@ -154,37 +133,27 @@ MerchantType  Scribe
 	Sells	BlankScrolls
 	Sells	Spellbook
 	Sells	Books
-	Buys	Circle5spells
-	Buys	Circle4spells
-	Buys	Circle3spells
-	Buys	Circle2spells
-	Buys	Circle1spells
-	Buys	Spellbook
 }
 
 Merchanttype Tinker
 {
 	Sells	tools
 	Sells	emptybottles
-	Buys	tools
 }
 
 merchanttype jeweler
 {
 	Sells	jewelry
-	Buys	jewelry
 }
 
 Merchanttype fisherman
 {
 	Sells	fish
-	Buys	fish
 }
 
 MerchantType decorator
 {
 	Sells	decorations
-	Buys	decorations
 }
 
 ProductGroup Instruments
@@ -197,14 +166,14 @@ ProductGroup Instruments
 
 ProductGroup    Reagents
 {
-	Item	0x0F7A	100	// black pearl
-	Item	0x0F7B	100	// blood moss
-	Item	0x0F84	100	// garlic
-	Item	0x0F85	100	// ginseng
-	Item	0x0F86	100	// mandrake root
-	Item	0x0F88	100	// nightshade
-	Item	0x0F8C	100	// sulphurous ash
-	Item	0x0F8D	100	// spider's silk
+	Item	0x0F7A	10000	// black pearl
+	Item	0x0F7B	10000	// blood moss
+	Item	0x0F84	10000	// garlic
+	Item	0x0F85	10000	// ginseng
+	Item	0x0F86	10000	// mandrake root
+	Item	0x0F88	10000	// nightshade
+	Item	0x0F8C	10000	// sulphurous ash
+	Item	0x0F8D	10000	// spider's silk
 	Multibag	BagORegs		2	//a bag of 200 of each reagent
 	Multibag	BigBagORegs	2	//a bag of 500 of each reagent
 }
@@ -218,8 +187,8 @@ ProductGroup beestuff
 {
 	Item	0x0A0F	10		//candle
 	Item	0xda10	10		//beehive
-	Item	0x1422	50		//Beeswax
-	Item	0x09ec	50		//Honey
+	Item	0x1422	500		//Beeswax
+	Item	0x09ec	500		//Honey
 }
 
 ProductGroup	Weapons
@@ -227,20 +196,20 @@ ProductGroup	Weapons
 	Item		0x0f49	1		//Axe
 	Item		0x0f47	1		//Battle Axe
 	Item		0x0f4b	1		//Double Axe
-	Item		0x0f45	1		//Executioner's Axe
-	Item		0x13fa	1		//Large Battle Axe
-	Item		0x1442	1		//Two-handed Axe
+//	Item		0x0f45	1		//Executioner's Axe
+//	Item		0x13fa	1		//Large Battle Axe
+//	Item		0x1442	1		//Two-handed Axe
 	Item		0x13af	1		//War Axe
-	Item		0x143c	1		//Hammer Pick
+//	Item		0x143c	1		//Hammer Pick
 	Item		0X0f5c	1		//Mace
 	Item		0X143a	1		//Maul
 	Item		0x1438	1		//War Hammer
 	Item		0X1406	1		//War Mace
 	Item		0X1402	1		//Short Spear
-	Item		0X0f63	1		//Spear
+//	Item		0X0f63	1		//Spear
 	Item		0x1404	1		//War Fork
 	Item		0X0f5e	1		//Broad Sword
-	Item		0X1440	1		//Cutlass
+//	Item		0X1440	1		//Cutlass
 	Item		0X0f51	1		//Dagger
 	Item		0X13fe	1		//Katanna
 	Item		0X1401	1		//Kryss
@@ -248,7 +217,7 @@ ProductGroup	Weapons
 	Item		0X13b5	1		//Scimitar
 	Item		0X13b9	1		//Viking Sword
 	Item		0x0f4e	1		//Bardiche
-	Item		0X143e	1		//Halberd
+//	Item		0X143e	1		//Halberd
 	Item		0x13e3	1		//Smith Hammer
 	Item		0x13f6	1		//ButcherKnife
 	Item		0x0ec4	1		//skinning knife
@@ -256,14 +225,13 @@ ProductGroup	Weapons
 
 ProductGroup	Armor
 {
-	Item		0x13bb	1		//Chainmail Coif
-	Item		0x13c3	1		//Chainmail Leggings
-	Item		0x13bf	1		//Chainmail Tunic
+//	Item		0x13bb	1		//Chainmail Coif
+//	Item		0x13c3	1		//Chainmail Leggings
+//	Item		0x13bf	1		//Chainmail Tunic
 	Item		0x140a	1		//Bascinet
 	Item		0x140c	1		//Close Helm
 	Item		0x1408	1		//Helmet
 	Item		0x140e	1		//Nose Helm
-	Item		0x708C	1		//Ringmail Coif
 	Item		0x13f2	1		//Ringmail Gloves
 	Item		0X13f0	1		//Ringmail Leggings
 	Item		0X13ee	1		//Ringmail Sleeves
@@ -286,43 +254,42 @@ ProductGroup    Ingots
 
 ProductGroup    Clothes
 {
-	Item		0x1EFD	1		//Fancy shirt
-	Item		0x1EFF	1		//Fancy Dress  
+//	Item		0x1EFD	1		//Fancy shirt
+//	Item		0x1EFF	1		//Fancy Dress  
 	Item		0x1F01	1		//Plain Dress
 	Item		0x1F03	1		//Robe
-	Item		0x1F7B	1		//Doublet
-	Item		0x1F9F	1		//Jester's Suit
-	Item		0x1FA1	1		//Tunic
-	Item		0x1FFD	1		//Surcoat
-	Item		0x1517	1		//Shirt
+//	Item		0x1F7B	1		//Doublet
+//	Item		0x1F9F	1		//Jester's Suit
+//	Item		0x1FA1	1		//Tunic
+//	Item		0x1FFD	1		//Surcoat
+//	Item		0x1517	1		//Shirt
 	Item		0x1515	1		//Cloak
 	Item		0x1516	1		//Shirt
-	Item		0x152E	1		//Short Pants
-	Item		0x1537	1		//Kilt
+//	Item		0x152E	1		//Short Pants
+//	Item		0x1537	1		//Kilt
 	Item		0x1539	1		//Long Pants
-	Item		0x153B	1		//Half Apron
-	Item		0x153D	1		//Full Apron
-	Item		0x153F	1		//Bandana
-	Item		0x1541	1		//Body Sash
-	Item		0x1543	1		//Skullcap
-	Item		0x1713	1		//Floppy Hat
-	Item		0x1714	1		//Wide-brim Hat
-	Item		0x1715	1		//Cap
-	Item		0x1719	1		//Bonnet
-	Item		0x171A	1		//Feathered Hat
-	Item		0x171B	1		//Tricorne Hat
-	Item		0x171C	1		//Jester hat
-	Item		0x1718	1		//wizard's hat
+//	Item		0x153B	1		//Half Apron
+//	Item		0x153D	1		//Full Apron
+//	Item		0x153F	1		//Bandana
+//	Item		0x1541	1		//Body Sash
+//	Item		0x1543	1		//Skullcap
+//	Item		0x1713	1		//Floppy Hat
+//	Item		0x1714	1		//Wide-brim Hat
+//	Item		0x1715	1		//Cap
+//	Item		0x1719	1		//Bonnet
+//	Item		0x171A	1		//Feathered Hat
+//	Item		0x171B	1		//Tricorne Hat
+//	Item		0x171C	1		//Jester hat
+//	Item		0x1718	1		//wizard's hat
 }
 
 ProductGroup    TailorItems
 {
 	Item		0x0F9D	5		//sewing kit
 	Item		0x0f9e	3		//scissors
-	Item	0x0FA0	10		//thread
+//	Item	0x0FA0	10000		//thread
 	Item		0x7055	1		//straight razor
 	Item		0x7056	1		//professional dye tub
-	Item		0x0E1D  10		// Ball of yard
 }
 
 ProductGroup    Leather
@@ -333,19 +300,19 @@ ProductGroup    Leather
 	Item		0x13CD	1		//Leather Sleeves
 	Item		0x13CB	1		//Leather Leggings
 	Item		0x13CC	1		//Leather Tunic
-	Item		0x13D6	1		//Studded Gorget
-	Item		0x13D5	1		//Studded Gloves
-	Item		0x13DC	1		//Studded Sleeves
-	Item		0x13DA	1		//Studded Leggings
-	Item		0x13DB	1		//Studded Tunic
-	Item		0x1C02	1		//Female Studded
+//	Item		0x13D6	1		//Studded Gorget
+//	Item		0x13D5	1		//Studded Gloves
+//	Item		0x13DC	1		//Studded Sleeves
+//	Item		0x13DA	1		//Studded Leggings
+//	Item		0x13DB	1		//Studded Tunic
+//	Item		0x1C02	1		//Female Studded
 	Item		0x1C06	1		//Female Leather
-	Item		0x1C08	1		//Leather Skirt
-	Item		0x1C0A	1		//Leather Bustier
-	Item		0x1C0C	1		//Studded Bustier
-	Item		0x1C00	1		//Leather Shorts
+//	Item		0x1C08	1		//Leather Skirt
+//	Item		0x1C0A	1		//Leather Bustier
+//	Item		0x1C0C	1		//Studded Bustier
+//	Item		0x1C00	1		//Leather Shorts
 	Item		0x170B	1		//Leather Boots
-	Item		0x1711	1		//Thigh Boots
+//	Item		0x1711	1		//Thigh Boots
 }
 
 ProductGroup    Containers
@@ -363,7 +330,7 @@ ProductGroup    Basic
 	Item		0x7055	2		//straight razor
 	Item		0x1372	2		//hairbrush
 	Item		0x0e27	2		//hairtonic
-	Item		0x0e21	10	//Bandages
+	Item		0x0e21	10000	//Bandages
 	Item		0x0f39	5		//Shovel
 	Item		0x5015	2		//wristwatch
 	Item		0x6001	2		//blank map
@@ -371,7 +338,7 @@ ProductGroup    Basic
 	Item		0x100f	2		//goldkey
 	Item		0x1013	2		//rustykey
 	Item		0x1011	2		//keyring
-	Item		0x1726	20		//coconut
+	Item		0x1726	200		//coconut
 	Item		0x7057	2		//trashbarrel
 	Item		0x0FA7	2		//dice
 }
@@ -382,17 +349,17 @@ ProductGroup    Tools
 	Item		0x1372	2		//hairbrush
 	Item		0x0f9e	2		//scissors
 	Item		0x102a	1		//Hammer
-	Item		0x1035	1		//Saw
-	Item		0x1028	1		//Dovetailsaw
-	Item		0x10e4	1		//drawknife
-	Item		0x10e5 	1		//Froe
-	Item		0x10e6	1		//inshave
-	Item		0x10e7	1		//Scorp
-	Item		0x1030	1		//Jointingplane
-	Item		0x102c	1		//mouldingplane
-	Item		0x1032	1		//Smoothingplane
+//	Item		0x1035	1		//Saw
+//	Item		0x1028	1		//Dovetailsaw
+//	Item		0x10e4	1		//drawknife
+//	Item		0x10e5 	1		//Froe
+//	Item		0x10e6	1		//inshave
+//	Item		0x10e7	1		//Scorp
+//	Item		0x1030	1		//Jointingplane
+//	Item		0x102c	1		//mouldingplane
+//	Item		0x1032	1		//Smoothingplane
 	Item		0x1ebc	1		//Tinker'sTools
-	Item		0x0e85	1		//pickaxe
+//	Item		0x0e85	1		//pickaxe
 	Item		0x0f39	1		//Shovel
 	Item		0x7055	1		//straight razor
 	Item		0x0ec4	1		//skinning knife
@@ -403,19 +370,19 @@ ProductGroup    Bows
 {
 	Item		0x13B2	1		//Bow
 	Item		0x0f4f	1		//Crossbow
-	Item		0x13fd	1		//HeavyCrossbow
+//	Item		0x13fd	1		//HeavyCrossbow
 }
 
 ProductGroup    Projectiles
 {
-	Item	0x1bfb	100		//bolt
-	Item	0x0f3f	100		//arrow
+	Item	0x1bfb	10000		//bolt
+	Item	0x0f3f	10000		//arrow
 }
 
 ProductGroup    Fletching
 {
-	Item		0x1BD4	100		//ArrowShaft
-	Item		0x1bd1	100		//feather
+	Item		0x1BD4	10000		//ArrowShaft
+	Item		0x1bd1	10000		//feather
 }
 
 ProductGroup    Deeds
@@ -445,61 +412,61 @@ ProductGroup    Deeds
 
 ProductGroup    Circle1Spells
 {
-	Item		reactivearmorscroll		1
+//	Item		reactivearmorscroll		1
 	Item		clumsyscroll			1
-	Item		createfoodscroll		1
+//	Item		createfoodscroll		1
 	Item		feeblemindscroll		1
-	Item		healscroll			1
+//	Item		healscroll			1
 	Item		magicarrowscroll		1
-	Item		nightsightscroll		1
+//	Item		nightsightscroll		1
 	Item		weakenscroll			1
 }
 
 ProductGroup    Circle2Spells
 {
-	Item		agilityscroll			1
+//	Item		agilityscroll			1
 	Item		cunningscroll			1
-	Item		curescroll			1
+//	Item		curescroll			1
 	Item		harmscroll			1
-	Item		magictrapscroll		1
+//	Item		magictrapscroll		1
 	Item		magicuntrapscroll		1
-	Item		protectionscroll		1
+//	Item		protectionscroll		1
 	Item		strengthscroll			1
 }
 
 ProductGroup    Circle3Spells
 {
-	Item		blessscroll			1
+//	Item		blessscroll			1
 	Item		fireballscroll			1
-	Item		magiclockscroll		1
+//	Item		magiclockscroll		1
 	Item		poisonscroll			1
-	Item		telekinesisscroll		1
+//	Item		telekinesisscroll		1
 	Item		teleportscroll			1
-	Item		magicunlockscroll		1
+//	Item		magicunlockscroll		1
 	Item		wallofstonescroll		1
 }
 
 ProductGroup    Circle4Spells
 {
-	Item		archcurescroll			1
+//	Item		archcurescroll			1
 	Item		archprotectionscroll	1
-	Item		cursecroll			1
+//	Item		cursecroll			1
 	Item		firefieldscroll		1
-	Item		greaterhealscroll		1
+//	Item		greaterhealscroll		1
 	Item		lightningscroll		1
-	Item		manadrainscroll		1
+//	Item		manadrainscroll		1
 	Item		recallscroll			1
 }
 
 ProductGroup    Circle5Spells
 {
-	Item		bladespiritscroll		1
+//	Item		bladespiritscroll		1
 	Item		dispelfieldscroll		1
-	Item		incognitoscroll		1
+//	Item		incognitoscroll		1
 	Item		magicrelfectscroll		1
-	Item		mindblastscroll		1
+//	Item		mindblastscroll		1
 	Item		paralyzescroll			1
-	Item		poisonfieldscroll		1
+//	Item		poisonfieldscroll		1
 	Item		summoncreaturescroll	1
 }
 
@@ -527,78 +494,78 @@ Productgroup shoes
 {
 	Item	0x170D	1		//Sandles
 	Item	0x170F	1		//Shoes
-	Item	0x170B	1		//LeatherBoots
-	Item	0x1711	1		//Thigh Boots
+//	Item	0x170B	1		//LeatherBoots
+//	Item	0x1711	1		//Thigh Boots
 }
 
 Productgroup food
 {
 	item fireplacedeed		2
 	item ovendeed			2
-	Item	0x1040	1		//pizza
-	Item	0x097E	2		//cheese
+	Item	0x1040	10		//pizza
+	Item	0x097E	200		//cheese
 	Item	0x1041	2		//pie
 	Item	0x09ea	2		//cake
-	Item	0x103b	5		//bread
+	Item	0x103b	500		//bread
 	Item	0xc8fe	2		//cookbook2
 	Item	0xc8fd	2		//cookbook3
 	Item	0xc8ff	2		//cookbook
 	item	0x1043	2		//rollingpin
 	item	0x15f8	2		//woodenbowl
 	item	0x097f	2		//fryingpan
-	Item	0x1045	1		//flour
+	Item	0x1045	100		//flour
 }
 
 productgroup meat
 {
-	Item	0x09c9	1		//ham
-	Item	0x0976	3		//bacon
-	Item	0x09c0	1		//sausage
-	Item	0x09b9	1		//raw bird
-	Item	0x097a	2		//raw fish
-	Item	0x09f2	2		//raw ribs
-	Item	0x1608	1		//chicken leg
-	Item	0x09b5	1		//eggs
-	item	0x1e8a	1		//lard
+	Item	0x09c9	100		//ham
+	Item	0x0976	30		//bacon
+	Item	0x09c0	100		//sausage
+	Item	0x09b9	100		//raw bird
+	Item	0x097a	200		//raw fish
+	Item	0x09f2	200		//raw ribs
+	Item	0x1608	100		//chicken leg
+	Item	0x09b5	100		//eggs
+	item	0x1e8a	10		//lard
 }
 
 productgroup veggies
 {
-	Item	0x0c6d	1		//onion
-	Item	0x0c5c	1		//watermelon
-	Item	0x0c6a	1		//pumpkin
-	Item	0x0d1a	1		//grapes
-	Item	0x172a	1		//lime
-	Item	0x1728	1		//lemon
-	Item 0x100d	1		//hay
-	Item	0x171f	1		//bananna
-	Item	0x172d	1		//pear
-	Item	0x172c	1		//peach
-	Item	0x09d0	1		//apple
+	Item	0x0c6d	10		//onion
+	Item	0x0c5c	10		//watermelon
+	Item	0x0c6a	100		//pumpkin
+	Item	0x0d1a	100		//grapes
+	Item	0x172a	100		//lime
+	Item	0x1728	100		//lemon
+	Item 0x100d	100		//hay
+	Item	0x171f	100		//bananna
+	Item	0x172d	100		//pear
+	Item	0x172c	100		//peach
+	Item	0x09d0	100		//apple
 }
 
 productgroup seeds
 {
 	Item Scarecrow1		2
-	Item 0xda11	2		//limeseed
-	Item 0xda0f	2		//lemonseed
-	Item 0xda0d	2		//bananaseed
-	Item 0xda0c	2		//pearseed
-	Item 0xda0b	2		//peachseed
-	Item 0xda12	2		//orangeseed
-	Item 0xda0a	2		//appleseed
-	Item	0xda06	5		//hopseed
-	Item	0xda01	5		//flaxseed
-	Item	0xda02	5		//cottonseed
-	Item 0xda08	5		//cabbageseed
-	Item 0xda07	5		//lettuceseed
-	Item	0xda0e	5		//potatoseed
-	Item	0x0d39	5		//turnipbulb
-	Item	0xc63a	5		//onionbulb
-	Item	0xda03	5		//carrotseed
-	Item	0x0c7f	5		//cornear
-	Item	0xda04	5		//wheatseed
-	Item 0xda09	5		//flowerseed
+	Item 0xda11	20		//limeseed
+	Item 0xda0f	20		//lemonseed
+	Item 0xda0d	20		//bananaseed
+	Item 0xda0c	20		//pearseed
+	Item 0xda0b	20		//peachseed
+	Item 0xda12	20		//orangeseed
+	Item 0xda0a	20		//appleseed
+	Item	0xda06	50		//hopseed
+	Item	0xda01	50		//flaxseed
+	Item	0xda02	50		//cottonseed
+	Item 0xda08	50		//cabbageseed
+	Item 0xda07	50		//lettuceseed
+	Item	0xda0e	50		//potatoseed
+	Item	0x0d39	50		//turnipbulb
+	Item	0xc63a	50		//onionbulb
+	Item	0xda03	50		//carrotseed
+	Item	0x0c7f	50		//cornear
+	Item	0xda04	50		//wheatseed
+	Item 0xda09	50		//flowerseed
 }
 
 productgroup jewelry
@@ -626,26 +593,26 @@ productgroup gems
 
 productgroup booze
 {
-	Item	0x099B	5
-	Item	0x099F	5
-	Item	0x09C7	5
-	Item	0x1F7D	5
-	Item	0x1F85	5
-	Item	0x1F8D	5
-	Item	0x09EF	5
+	Item	0x099B	500
+	Item	0x099F	500
+	Item	0x09C7	500
+	Item	0x1F7D	500
+	Item	0x1F85	500
+	Item	0x1F8D	500
+	Item	0x09EF	500
 }
 
 productgroup fish
 {
-	Item	0x097a	10		//raw fish steak
-	Item	0x09cc	10
-	item	0x09cd	1
-	item	0x09ce	1
-	item	0x09cf	1
-	item	0x0dd6	1
-	item	0x0dd7	1
-	item	0x0dd8	1
-	item	0x0dd9	1		//all above are fish
+	Item	0x097a	100		//raw fish steak
+	Item	0x09cc	20
+//	item	0x09cd	1
+//	item	0x09ce	1
+//	item	0x09cf	1
+//	item	0x0dd6	1
+//	item	0x0dd7	1
+//	item	0x0dd8	1
+//	item	0x0dd9	1		//all above are fish
 	item	0x0dbf	2		//fish pole
 }
 
@@ -657,7 +624,7 @@ productgroup Spellbook
 
 productgroup emptybottles
 {
-	Item	0x0F0E	10		//empty bottles
+	Item	0x0F0E	10000		//empty bottles
 }
 
 ProductGroup decorations
@@ -703,7 +670,7 @@ ProductGroup    Healingstuff
 {
 	Item	0x7055	1		//straight razor
 	Item	0x1372	2		//hairbrush
-	Item	0x0e21	10	//Bandages
+	Item	0x0e21	10000	//Bandages
 	Item	0x1372	1		//hairbrush
 	Item	0x0f9e	1		//scissors
 	Item	0x0ec4	1		//skinning knife
