--- a/trunk/098/pol.cfg
+++ b/trunk/098/pol.cfg
@@ -10,7 +10,12 @@
 # UoDataFileRoot: where the UO client files are located.
 # Used by UOConvert.exe to find map, multi, tiledata, statics, etc. files.
 #
-UoDataFileRoot=MUL
+UoDataFileRoot=C:\Games\RPG\Ultima Online Stygian Abyss Classic
+#
+# Used to tell POL where to look for the server data.
+# Defaults to 'data' from where pol.exe is started.
+#
+WorldDataPath=data/
 
 #
 # Used to tell POL where to look for the realm data that was made by uoconvert.
@@ -23,7 +28,10 @@ RealmDataPath=realm/
 # in the accounts.txt file. If you set it to 0, all will be erased. You can get them back
 # by changing this back to 1 and successfully logging into the account (for each account)
 #
-RetainCleartextPasswords=1
+RetainCleartextPasswords=0
+
+MaxTileID=0x7fff
+maxtileid=0x7fff
 
 #############################################################################
 ## Logon and Logoff
@@ -31,26 +39,38 @@ RetainCleartextPasswords=1
 
 #
 # MinCmdlevelToLogin: Only characters with this command level or higher
-#                     log in. (0=player,5=admin)
+#                     log in. (ex: 0=player,5=admin)
 #
 MinCmdlevelToLogin=0
+
+#
+# MinCmdLvlToIgnoreInactivity: Sets the minimum command level a character can have to be excluded
+#                              from timing out due to inactivity. Default is 0 (No one times out)
+#
+MinCmdLvlToIgnoreInactivity=1
 
 #
 # InactivityWarningTimeout: Time in minutes until the user gets a "you are
 #                           about to be disconnected" message
 #
-InactivityWarningTimeout=4
+InactivityWarningTimeout=5
 
 #
 # InactivityDisconnectTimeout: Idle Time in minutes before the user is
 #                              disconnected.
 #
-InactivityDisconnectTimeout=5
+InactivityDisconnectTimeout=6
 
 #
 # MaximumClients: Sets the total number of clients allowed to connect at
 #                 one time.
-MaximumClients=300
+MaximumClients=500
+
+#
+# CharacterSlots: Sets the maximum number of characters per account.
+#                 Default is 5. Some clients support 6.
+#
+CharacterSlots=7
 
 #
 # MaximumClientsBypassCmdLevel: Sets the character command level that bypasses the
@@ -65,12 +85,12 @@ MaximumClientsBypassCmdLevel=1
 #
 # LogLevel:
 #
-LogLevel=0
+LogLevel=11
 
 #
 # DebugLevel:
 #
-DebugLevel=0
+DebugLevel=6
 
 #
 # WatchRPM: display the RPM counter to console every minute
@@ -164,10 +184,10 @@ DumpStackOnAssertionFailure=1
 EnableDebugLog=1
 
 #
-# MiniDumpType: type of crash dump created. values: small (default) or large.
-#               Case sensative.
+# MiniDumpType: type of crash dump created. values: small, variable, or large.
+#               Case sensative. Recommended is variable.
 #
-MiniDumpType=small
+MiniDumpType=variable
 
 #
 # DisplayUnknownPackets: If a packet is unknown, it will be reported to the console.
@@ -199,7 +219,7 @@ WebServer=1
 #
 # WebServerPort: What TCP/IP port to listen for web requests
 #
-WebServerPort=5000
+WebServerPort=5003
 
 #
 # WebServerLocalOnly: Only allow access from localhost
@@ -209,7 +229,7 @@ WebServerLocalOnly=0
 #
 # WebServerDebug: Print trace information about http requests
 #
-WebServerDebug=0
+WebServerDebug=1
 
 #
 # WebServerPassword: username/password required for access to the web server.
@@ -225,13 +245,13 @@ WebServerPassword=
 #
 # CheckIntegrity: check for duplicate objects on startup
 #
-CheckIntegrity=1
+CheckIntegrity=0
 
 #
 # IgnoreLoadErrors: force load to continue even if object creations fail
 #                   or containers cannot be found.
 #
-IgnoreLoadErrors=0
+IgnoreLoadErrors=1
 
 #
 # InhibitSaves: Don't ever save world state
@@ -282,4 +302,8 @@ Multithread=1
 #   Set to 10 for a non-dedicated server.
 #   Has no effect in multithread mode
 #
-SelectTimeout=10
+SelectTimeout=0
+
+# TimestampEveryLine 1/0 (default 0) if set every line in pol.log gets timestamp
+TimestampEveryLine=0
+
